--- a/src/App.css
+++ b/src/App.css
@@ -24,15 +24,35 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.menu {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 1%;
+  padding-top: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cosoDelMenu {
+
+  height: 40px;
+  min-width: 40px;
+  border-radius: 100%;
+  background-color: silver;
+  justify-content: center;
+  display: flex;
+  align-items: center;
 }
+
+.busqueda {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60%;
+  background-color: silver;
+  border-radius: 20px;
+  padding: 10px 20px;
+}
+
+
