--- a/src/App.css
+++ b/src/App.css
@@ -78,4 +78,42 @@
   background-color: silver;
 }
 
+.principal {
 
+  flex: 1;
+  height: auto;
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 300px);
+  grid-auto-rows: 10px;
+
+}
+
+.pin {
+  border-radius: 16px;
+  background: #282c34;
+  margin: 5px;
+  position: relative;
+  overflow: hidden;
+}
+
+.pin.pequeño {
+  grid-row-end: span 26;
+}
+
+.pin.mediano {
+  grid-row-end: span 32;
+}
+
+.pin.grande {
+  grid-row-end: span 40;
+}
+
+.pin.pin1 {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+}
