no sé que ni cuando, pero hice algo y ahora no puedo escribit en el formulario de inicio

--- a/src/inicio.css
+++ b/src/inicio.css
@@ -26,6 +26,12 @@ form {
 .cssField {
     border-radius: 15px;
     align-items: center;
+    background-color: cornflowerblue;
+
+}
+
+.pinstacss {
+    margin-left: 60px;
 }
 
 .google {
